# srdiffraction

./: CMakeLists.txt  plot_edep_h2.py  run1.mac  run2.mac  srdet.cc  srdet.in  srdiffraction.cc  srdiffraction.in  vis.mac  vis_srdiffraction.mac
G4bimboline/: Be 1000000 events nonzero.txt  C 1000000 events nonzero.txt  Diffraction Al2O3.g4bl  Diffraction Be.g4bl  Diffraction GlassyC.g4bl  Diffraction Ti.g4bl  Diffraction matplotlib.py  Ti 1000000 events nonzero.txt  g4bl.out  Обработка.xlsx
include/: ActionInitialization.hh  DetectorConstruction.hh  EventAction.hh  PMMAHit.hh  PhysicsList.hh  PrimaryGeneratorAction.hh  RunAction.hh  SDHits.hh  SensitiveDetector.hh  SteppingAction.hh
src/: ActionInitialization.cc  DetectorConstruction.cc  EventAction.cc  PMMAHit.cc  PhysicsList.cc  PrimaryGeneratorAction.cc  RunAction.cc  SDHits.cc  SensitiveDetector.cc  SteppingAction.cc
